--- a/nepattern/i18n/zh-CN.json
+++ b/nepattern/i18n/zh-CN.json
@@ -1,6 +1,6 @@
 {
   "nepattern": {
-    "type_error": "参数 {target} 的类型不正确",
+    "type_error": "参数 {target} 的类型 {type} 不正确",
     "content_error": "参数 {target} 不正确",
     "sequence_form_error": "不正确的序列形式: {target}",
     "validate_reject": "{target} 校验失败",
