:speech_balloon: use !r

--- a/nepattern/i18n/zh-CN.json
+++ b/nepattern/i18n/zh-CN.json
@@ -1,7 +1,7 @@
 {
   "nepattern": {
-    "type_error": "参数 {target} 的类型 {type} 不正确, 其应该是 {expected}",
-    "content_error": "参数 {target} 不正确, 其应该是 {expected}",
+    "type_error": "参数 {target!r} 的类型 {type} 不正确, 其应该是 {expected!r}",
+    "content_error": "参数 {target!r} 不正确, 其应该符合 {expected!r}",
     "validate_error": "{target} 校验失败",
     "sequence_form_error": "不正确的序列形式: {target}",
     "validate_reject": "{target} 校验失败",
