:arrow_up: version 0.7.3

--- a/nepattern/i18n/en-US.json
+++ b/nepattern/i18n/en-US.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "./.lang.schema.json",
   "nepattern": {
     "type_error": "type {type} of parameter {target} is incorrect; expected {expected}",
     "content_error": "parameter {target} is incorrect; expected {expected}",
