--- a/nepattern/i18n/.template.json
+++ b/nepattern/i18n/.template.json
@@ -9,7 +9,8 @@
           "subtype": "error",
           "types": [
             "content",
-            "type"
+            "type",
+            "pattern_head_or_tail"
           ]
         }
       ]
